k8s/apps/home/frigate/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frigate-mqtt-out
spec:
  podSelector:
    matchLabels:
      app: frigate
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: home
        podSelector:
          matchLabels:
            app: nats
